Add quarkus cache and data changes over provider with event handling for TrackBlock
